# aspa_eval

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
aspa_eval/: __main__.py
aspa_eval/policies/: aspa_edge.py  aspa_otc_edge.py  bgpsec_edge.py  otc_edge.py  pathend_edge.py
aspa_eval/scenarios/: __init__.py  attacker_customer_cone_tracking_mixin.py  customer_cone_tracking_hijacks.py  paper_shortest_path_prefix_hijack.py
aspa_eval/sims/: first_asn_stripping_sims.py  post_rov_motivation_sims.py  shortest_path_sims.py  sims_to_run.py
pathsec/: __main__.py  attacker_mod_scenario.py  sus_route_leak.py
pathsec/policies/: __init__.py  algo.py  aspa_edge.py  aspa_edge_otc_simple_policy.py  aspa_edge_otc_sus_algo_simple_policy.py  aspa_edge_simple_policy.py  aspa_edge_sus_algo_simple_policy.py  aspa_otc_edge.py  bgpsec_edge.py  bgpsec_edge_simple_policy.py  edge_filter.py  edge_filter_simple_policy.py  old.py  otc_edge.py  otc_edge_simple_policy.py  path_sus_algo_simple_policy.py  pathend_edge.py  pathend_edge_simple_policy.py  pathend_edge_sus_algo_simple_policy.py  shortest_path_export_all_attacker.py  spoofing_edge_otc_filters_simple_policy.py  spoofing_edge_otc_path_sus_filters_simple_policy.py  spoofing_edge_path_sus_filters_simple_policy.py  spoofing_filter_simple_policy.py
pathsec/scenarios/: attacker_customer_cone_tracking_mixin.py  customer_cone_tracking_hijacks.py  paper_shortest_path_prefix_hijack.py
pathsec/sims/: __init__.py  adoption_scenario_sims.py  first_asn_stripping_sims.py  forged_origin_sims.py  opt.py  post_rov_motivation_sims.py  route_leak_sims.py  run_adoption_scenarios_sim.py  run_forged_origin_export_all_hijack_sim.py  run_forged_origin_export_all_hijack_transit_sim.py  run_forged_origin_hijack_adoption_scenarios_sim.py  run_neighbor_spoofing_hijack_sim.py  run_origin_hijack_sim.py  run_origin_spoofing_hijack_sim.py  run_post_rov_motivation_sim.py  run_route_leak_adoption_scenarios_sim.py  run_route_leak_mh_sim.py  run_route_leak_sim.py  run_route_leak_transit_sim.py  run_shortest_path_export_all_hijack_adoption_scenarios_sim.py  run_shortest_path_export_all_hijack_etc_cc_sim.py  run_shortest_path_export_all_hijack_etc_cc_w_bgp_sim.py  run_shortest_path_export_all_hijack_etc_sim.py  run_shortest_path_export_all_hijack_input_clique_sim.py  run_shortest_path_export_all_hijack_sim.py  run_shortest_path_export_all_hijack_transit_sim.py  run_shortest_path_export_all_hijack_transit_sim_old.py  run_sim.py  run_strongest_attack_sim.py  shortest_path_sims.py  sim_kwargs.py  sims_to_run.py
pathsec/tests/: test_placeholder.py
scripts/: aspapp_distance_check.py  aspawn_check.py  copy_renamed_graphs.sh  format_graphs.py  graph_factory.py  japan_comparison.py  ndss_slides.py  nils_base_comparison.py  pickle_patch.py  post_rov_motivation.py  route_leak_with_attacker_adopting.py  rov_deployment.py  update_graphs.py  verification_prevention_attack.py
scripts/new_aspa_attack/: preprocess_anns_funcs.py  run_aspa_hijack_sim.py
scripts/old/: aspapp_distance_check.py  camerons_old_provider_cone_code.py  pickle_patch.py  verification_prevention_attack.py
(+227 files in other folders)
